更新了笔记与readme文档

--- a/CPP/C-C++02_常用函数.md
+++ b/CPP/C-C++02_常用函数.md
@@ -141,7 +141,7 @@ int main() {
 
 ## read()
 
-+ 简述：将大小为`nbytes`的数据从文件`__fd`中读取到内存`__buf`中
+<!-- + 简述：将大小为`nbytes`的数据从文件`__fd`中读取到内存`__buf`中
 + 声明：`ssize_t read(int __fd, void *__buf, size_t __nbytes);`
 + 参数：
   + `__fd`  --  被读取数据的文件
@@ -153,7 +153,67 @@ int main() {
 + 注意：
   + 必须实际提供一个足够大的缓冲区来装载`nbyte`字节的数据
   + 常见的错误是提供了一个未初始化的指针buf，而没有提供实际的缓冲区
-  + read的实现必须检测的错误及相应的错误码
+  + read的实现必须检测的错误及相应的错误码 -->
+
++ 简介：
+  + read() 函数用于从文件描述符中读取数据
+
++ 原型
+```c
+#include <unistd.h>
+
+ssize_t read(int fd, void *buf, size_t count);
+```
+
++ 参数
+  + fd：文件描述符，指定要读取的文件或其他数据源
+  + buf：用于存储读取数据的缓冲区的指针
+  + count：要读取的最大字节数
+
++ 返回值：
+  + 如果成功读取数据，返回实际读取的字节数
+  + 如果到达文件末尾，返回0
+  + 如果发生错误，返回-1，并设置 errno 变量来指示具体的错误原因
+
++ 详解：
+  + read() 函数将尽可能读取指定数量的字节，并将其存储在提供的缓冲区中。它会阻塞，直到读取到足够的字节或者遇到文件末尾。如果文件中没有足够的数据可供读取，那么 read() 函数将一直等待，直到有足够的数据可供读取或者遇到其他读取条件（如文件被关闭、读取超时等）
+
++ 示例
+```c
+#include <stdio.h>
+#include <unistd.h>
+#include <fcntl.h>
+
+#define BUFFER_SIZE 1024
+
+int main() {
+    int fd = open("file.txt", O_RDONLY);
+    if (fd == -1) {
+        perror("Failed to open file");
+        return 1;
+    }
+    
+    char buffer[BUFFER_SIZE];
+    ssize_t bytesRead;
+    
+    while ((bytesRead = read(fd, buffer, BUFFER_SIZE)) > 0) {
+        write(STDOUT_FILENO, buffer, bytesRead);
+    }
+    
+    if (bytesRead == -1) {
+        perror("Failed to read file");
+        close(fd);
+        return 1;
+    }
+    
+    close(fd);
+    return 0;
+}
+```
+
++ 注：
+  + 上述示例代码使用 open() 函数打开文件，并使用 read() 函数从文件中读取数据，然后使用 write() 函数将数据写入到标准输出。循环读取直到 read() 函数返回值为0，表示已读取完所有数据
+  + 注意：在实际使用 read() 函数时，需要注意处理返回值、错误检查和错误处理，以确保数据的正确读取和错误的及时处理
 
 ## mmap()
 
@@ -719,12 +779,53 @@ if (file != NULL) {
 
 ## remove()
 
-+ 简述：通过文件名称删除文件
+<!-- + 简述：通过文件名称删除文件
 + 声明：`int remove(const char* __filename);`
 + 参数：
   + `filename`  --  指向文件名的字符指针
 + 需求：
-  + 头文件：`#include <stdio.h>`
+  + 头文件：`#include <stdio.h>` -->
+
++ 简介
+  +  remove() 是C标准库中的一个函数，用于删除文件
+
++ 原型：
+```c
+#include <stdio.h>
+
+int remove(const char *filename);
+```
+
++ 参数：
+  + remove() 函数接受一个字符串参数 filename，表示要删除的文件名（包括路径）
+
++ 返回值：
+  + 如果文件删除成功，则返回值为 0
+  + 如果删除失败，则返回一个非零值。
+
++ 详解：
+  + 需要注意的是，remove() 函数只能删除普通的文件，无法删除目录。如果要删除目录，需要使用操作系统提供的特定函数或命令
+
++ 示例：
+```c
+#include <stdio.h>
+
+int main() {
+    const char *filename = "file.txt";
+
+    if (remove(filename) == 0) {
+        printf("文件删除成功\n");
+    } else {
+        printf("文件删除失败\n");
+    }
+
+    return 0;
+}
+```
+
++ 注：
+  + 在上述示例中，我们尝试删除名为 "file.txt" 的文件。如果文件删除成功，则输出 "文件删除成功"，否则输出 "文件删除失败"
+  + 需要注意的是，删除文件是一个具有风险的操作，因此在执行删除操作之前应该谨慎确认。确保要删除的文件存在且不再需要，以免误删重要文件
 
 ## rename()
 
