--- a/CPP/C-C++03_常用函数.md
+++ b/CPP/C-C++03_常用函数.md
@@ -1,3 +1,84 @@
+## sched_yield
+
++ 简介：
+  + sched_yield() 函数是一个库函数，它允许一个正在运行的线程主动放弃 CPU 的使用权，从而使得其他可运行的线程有机会运行
+
++ 原型
+```c
+#include <sched.h>
+
+int sched_yield(void);
+```
+
++ 参数
+  + sched_yield() 函数没有参数，它的返回值为调用是否成功
+
++ 详解：
+  + sched_yield() 函数的作用是将当前线程移出调度器的运行队列，让其他具有相同或更高优先级的可运行线程有机会被调度和执行。简而言之，调用 sched_yield() 函数会主动让出 CPU，给其他线程执行的机会
+  + sched_yield() 函数是一种协作式的调度机制。在使用 sched_yield() 之前，内核会保证当前线程在运行队列中是处于就绪状态的。调用 sched_yield() 后，内核会选择一个合适的线程来运行，具体的选择是由调度算法和线程的优先级决定的
+  + sched_yield() 函数不能保证当前线程立即放弃 CPU 控制权，也不能保证其他线程立即运行。它仅仅是给其他线程运行的机会，具体的调度还是由内核来决定
+  + sched_yield() 函数通常在以下情况下使用：
+    + 当线程在忙碌运行一段时间后，如果没有更多的工作可以做，可以调用 sched_yield() 来让其他线程有机会运行，避免资源的浪费
+    + 在实现自旋锁或自旋等待时，可以使用 sched_yield() 来减小自旋的开销，避免过度消耗 CPU 资源
+
++ 注：
+  + 需要注意的是，sched_yield() 函数只对线程调度起到协作的作用，具体的调度策略和行为由内核来决定，并且在不同的操作系统和调度器中可能会有一些差异。因此，在实际使用中，需要谨慎考虑 sched_yield() 函数的使用时机和效果，并进行充分的测试和验证
+
+## lseek
+
++ 简介：
+  + 文件的定位操作可以使用 lseek() 函数，该函数可以将文件的当前位置指针移动到指定的位置
+
++ 原型：
+```c
+#include <unistd.h>
+
+off_t lseek(int fd, off_t offset, int whence);
+```
+
++ 参数：
+  + fd：文件描述符，表示要进行定位操作的文件。
+  + offset：偏移量，表示相对于 whence 参数指定位置的偏移量。
+  + whence：定位基准位置，可以是以下值之一
+    + SEEK_SET：从文件开头开始计算偏移量
+    + SEEK_CUR：从当前位置开始计算偏移量
+    + SEEK_END：从文件末尾开始计算偏移量
+
++ 返回值：
+  + 如果成功，返回新的文件位置指针的偏移量
+  + 如果发生错误，返回值为 -1，并设置 errno 变量来指示具体的错误原因。
+
++ 示例：
+```c
+#include <stdio.h>
+#include <unistd.h>
+#include <fcntl.h>
+
+int main() {
+    int fd = open("file.txt", O_RDONLY);
+    if (fd == -1) {
+        perror("Failed to open file");
+        return 1;
+    }
+    
+    off_t offset = lseek(fd, 0, SEEK_SET);
+    if (offset == -1) {
+        perror("Failed to move file pointer to the beginning");
+        close(fd);
+        return 1;
+    }
+    
+    // 现在文件位置指针已经在文件开头，可以进行后续操作
+    
+    close(fd);
+    return 0;
+}
+```
+
++ 注：
+  + 在上述示例中，我们使用 open() 函数打开文件，并使用 lseek() 函数将文件位置指针移动到文件开头。如果 lseek() 返回值为 -1，表示定位失败，我们可以使用 perror() 函数打印错误消息
+  + 需要注意的是，lseek() 函数在处理二进制文件或随机访问文件时非常有用。对于顺序读取文件的情况，可以使用更高级的文件读取函数，如 fseek() 和 rewind()
+
 ## tcflush
 
 + 简介：
