--- a/CPP/C-C++05_理论基础.md
+++ b/CPP/C-C++05_理论基础.md
@@ -1,5 +1,253 @@
 # 概述 -- 理论基础知识
 
+## 回调函数 存在的意义
+
+回调函数在 C++ 中具有重要的意义，它为编程提供了灵活性和可扩展性。以下是一些回调函数存在的意义：
+
+1. 事件驱动编程：回调函数是事件驱动编程的核心概念。通过将回调函数注册到特定的事件上，当事件发生时，回调函数会被自动调用。这种机制使得程序能够对各种事件作出响应，例如用户交互、消息传递、I/O 操作完成等。回调函数使得程序能够在特定事件发生时执行相应的逻辑，实现异步和非阻塞的处理方式。
+
+2. 解耦合和模块化：通过使用回调函数，可以将程序的不同模块解耦合。一个模块可以定义一个回调函数，并将其传递给另一个模块作为参数。这样，两个模块之间的通信可以通过回调函数进行，而不需要直接依赖于具体的实现细节。这种解耦合和模块化的设计使得代码更加清晰、可维护和可重用。
+
+3. 定制化和扩展性：回调函数使得程序可以根据需要进行定制化和扩展。通过定义不同的回调函数实现，可以在运行时动态地改变程序的行为。这种灵活性使得程序能够适应不同的需求和场景，增强了程序的可扩展性。
+
+4. 高阶函数和函数式编程：回调函数是高阶函数和函数式编程的基础。高阶函数指的是可以接受其他函数作为参数或返回函数作为结果的函数。通过使用回调函数，可以实现函数的参数化和抽象，使得代码更加简洁和可读。
+
+总的来说，回调函数在 C++ 中具有重要的意义，它们支持事件驱动编程、解耦合和模块化、定制化和扩展性，并为函数式编程提供了基础。回调函数使得程序更加灵活、可扩展和可维护，提高了代码的可读性和可重用性。
+
+## 线程函数 与 线程
+
+在 C++ 中，线程函数是在线程中执行的函数。线程函数定义了线程的行为和逻辑。以下是有关 C++ 线程函数和线程的详细解释：
+
+1. 线程函数的定义：
+   线程函数是一个可调用的实体，可以是普通函数、函数对象或 Lambda 表达式。线程函数的签名（参数列表和返回类型）必须与线程创建时所需的函数类型匹配。例如：
+
+   ```cpp
+   // 线程函数作为普通函数
+   void threadFunction() {
+       // 线程逻辑
+   }
+
+   // 线程函数作为函数对象
+   struct ThreadFunctor {
+       void operator()() {
+           // 线程逻辑
+       }
+   };
+
+   // 线程函数作为 Lambda 表达式
+   auto lambda = []() {
+       // 线程逻辑
+   };
+   ```
+
+   在上述示例中，`threadFunction`、`ThreadFunctor` 的 `operator()` 和 Lambda 表达式都可以作为线程函数。
+
+2. 启动线程：
+   可以使用 `std::thread` 类创建线程并启动线程。例如：
+
+   ```cpp
+   std::thread t(threadFunction);  // 以线程函数启动线程
+   ```
+
+   在上面的示例中，使用线程函数 `threadFunction` 创建了一个新的线程。
+
+3. 线程的执行和等待：
+   一旦线程被创建，它会在调度器中获得执行。可以使用 `std::thread` 类的成员函数来等待线程的结束。
+
+   - `std::thread::join()`：等待线程执行完成。
+   - `std::thread::detach()`：分离线程，允许线程在后台运行。
+
+   ```cpp
+   std::thread t(threadFunction);  // 启动线程
+   // ...
+   t.join();  // 等待线程执行完成
+   ```
+
+   在上述示例中，`t.join()` 会等待线程执行完成，确保主线程在子线程结束之前不会退出。
+
+4. 传递参数给线程函数：
+   可以通过在创建线程时传递参数来向线程函数传递参数。参数可以是值、引用或移动语义。例如：
+
+   ```cpp
+   void threadFunction(int value, const std::string& str) {
+       // 使用参数执行线程逻辑
+   }
+
+   int main() {
+       int value = 42;
+       std::string str = "Hello";
+
+       std::thread t(threadFunction, value, std::cref(str));  // 传递参数给线程函数
+
+       // ...
+
+       t.join();  // 等待线程执行完成
+
+       return 0;
+   }
+   ```
+
+   在上面的示例中，`threadFunction` 的参数通过 `std::thread` 构造函数传递给线程函数。
+
+线程函数是多线程编程中的重要概念，它定义了线程的行为和任务。合理地设计和编写线程函数可以
+
+帮助实现并发性和并行性，并处理共享数据、同步和线程间通信等问题。在 C++ 中，可以使用 `<thread>` 头文件提供的类和函数来创建和管理线程，实现多线程应用程序。
+
+## 多线程
+
+C++ 中的多线程编程允许程序在同一时间执行多个独立的执行流，从而提高并发性和性能。C++ 11 引入了 `<thread>` 头文件，提供了一组用于创建和管理线程的类和函数。以下是关于 C++ 多线程的详细解释：
+
+1. 创建线程：
+   可以使用 `std::thread` 类来创建一个新的线程。创建线程的一种常见方式是通过函数指针或函数对象创建线程。例如：
+
+   ```cpp
+   #include <iostream>
+   #include <thread>
+
+   // 线程函数
+   void threadFunction() {
+       std::cout << "Hello from thread!" << std::endl;
+   }
+
+   int main() {
+       // 创建新线程
+       std::thread t(threadFunction);
+
+       // 主线程继续执行其他操作
+       std::cout << "Hello from main thread!" << std::endl;
+
+       // 等待线程结束
+       t.join();
+
+       return 0;
+   }
+   ```
+
+   在上面的例子中，`std::thread t(threadFunction)` 创建了一个新的线程，并在该线程中执行 `threadFunction` 函数。`t.join()` 等待线程结束。
+
+2. 传递参数给线程：
+   可以通过将参数传递给线程的构造函数来向线程传递参数。参数可以是值、引用或移动语义。例如：
+
+   ```cpp
+   #include <iostream>
+   #include <thread>
+
+   void threadFunction(int value, const std::string& str) {
+       std::cout << "Value: " << value << std::endl;
+       std::cout << "String: " << str << std::endl;
+   }
+
+   int main() {
+       int value = 42;
+       std::string str = "Hello";
+
+       std::thread t(threadFunction, value, std::cref(str));
+
+       t.join();
+
+       return 0;
+   }
+   ```
+
+   在上面的例子中，`threadFunction` 函数接受一个整数和一个字符串作为参数。通过在 `std::thread` 构造函数中传递这些参数来向线程传递参数。注意使用 `std::cref` 来传递 `std::string` 的引用。
+
+3. 线程同步：
+   在多线程编程中，需要注意线程之间的同步，以避免数据竞争和不确定的行为。C++ 提供了多种线程同步机制，如互斥量 (`std::mutex`)、条件变量 (`std::condition_variable`)、原子操作 (`std::atomic`) 等，用于保护共享数据的访问和实现线程间的通信。
+
+   ```cpp
+   #include <iostream>
+   #include <thread>
+   #include <mutex>
+
+   std::mutex mtx;
+   int sharedData = 0;
+
+   void threadFunction() {
+       std::lock_guard<std::mutex> lock(mtx);
+
+       sharedData++;
+   }
+
+   int main() {
+       std::thread t1(threadFunction);
+       std::thread t2(threadFunction);
+
+       t1.join();
+       t2.join();
+
+       std::cout << "Shared Data: " << sharedData << std::endl;
+
+       return 0;
+   }
+   ```
+
+   在上面的例子中，`std::mutex` 用于保护共享数据 `sharedData` 的访问。通过使用 `std::lock_guard`，可以确保在离开作用域时自动释放互斥量。
+
+以上是 C++ 中多线程编程的基础知识。多线程编程需要谨慎处理共享数据、同步操作和避免竞态条件等问题。在实际应用中，还可以探索更多的线程管理、任务分发和线程池等概念和技术，以实现更复杂的多线程应用程序。
+
+## 队列
+
+在C++中，`<queue>`是一个标准库头文件，提供了队列（Queue）容器的实现。队列是一种遵循先进先出（First-In-First-Out，FIFO）原则的容器，允许在队尾插入元素，在队头删除元素。下面是关于`<queue>`的详细解释：
+
+1. 队列容器的创建：
+   ```cpp
+   #include <queue>
+
+   std::queue<T> queueObject;
+   ```
+   这里的 `T` 是队列中存储的元素类型，可以是任意类型。
+
+2. 队列容器的基本操作：
+   - `push(value)`: 将元素插入队列的末尾。
+   - `pop()`: 删除队列头部的元素，不返回其值。
+   - `front()`: 返回队列头部元素的引用，不对队列进行修改。
+   - `back()`: 返回队列末尾元素的引用，不对队列进行修改。
+   - `empty()`: 判断队列是否为空，返回布尔值。
+   - `size()`: 返回队列中元素的个数。
+
+   例如：
+   ```cpp
+   std::queue<int> queueObject;
+   queueObject.push(10);  // 插入元素10
+   queueObject.push(20);  // 插入元素20
+
+   int frontElement = queueObject.front();  // 获取队列头部元素（10）
+   int backElement = queueObject.back();  // 获取队列末尾元素（20）
+   queueObject.pop();  // 删除队列头部元素（10）
+
+   bool isEmpty = queueObject.empty();  // 判断队列是否为空（false）
+   int queueSize = queueObject.size();  // 获取队列中元素的个数（1）
+   ```
+
+3. 队列容器的特点：
+   - 队列是一种动态数据结构，它会自动调整大小以适应存储的元素数量。
+   - 队列允许在队尾插入元素，在队头删除元素，保持了元素插入和删除的顺序。
+   - 队列的元素按照先进先出（FIFO）的原则进行访问。
+
+4. 注意事项：
+   - `<queue>`头文件只提供了队列的基本操作，不支持直接迭代访问元素。
+   - 如果需要按照顺序访问队列的所有元素，可以先将队列中的元素弹出到另一个容器，然后逐个访问。
+
+队列是一个常用的数据结构，适用于需要先进先出操作的场景。`<queue>`头文件提供了方便的接口和操作，使得队列的使用变得简单和高效。
+
+## 字 字节
+
+在 Linux 系统中，字和字节是计算机存储和处理数据的基本单位。下面是对字和字节的详细解释：
+
+1. 字节（Byte）：
+   - 字节是计算机中存储和传输数据的最小单位。
+   - 一个字节由8个二进制位（bit）组成，每个二进制位可以表示0或1。
+   - 字节通常用于存储和表示字符、整数和其他数据类型。
+
+2. 字（Word）：
+   - 字是计算机中用于处理数据的基本单位，其大小取决于特定计算机架构和操作系统。
+   - 在不同的系统中，字的大小可以是8位（1字节）、16位（2字节）、32位（4字节）或64位（8字节）等。
+   - 字一般用于处理整数、浮点数、指针等数据类型，以及进行计算和操作。
+
+在大多数现代计算机架构中，一个字节由8个二进制位组成，并且一个字通常等于一个或多个字节。例如，常见的 x86 架构中，一个字节等于8位，一个字通常等于4字节（32位系统）或8字节（64位系统）。
+
+需要注意的是，字和字节的大小可以根据不同的计算机架构和操作系统而异。因此，在编程和系统开发中，需要明确指定字节和字的大小以确保正确处理和操作数据。
+
 ## C++ 文件读取到内存，为什么都是以char数据类型存储
 
 在C++中，文件读取到内存通常使用 `char` 类型存储数据，是因为 `char` 类型是最基本的字节类型，在内存中以字节为单位存储数据。文件可以被视为字节流，而 `char` 类型正好可以表示一个字节的数据。
@@ -1167,7 +1415,7 @@ C++ 插件在软件开发中具有许多应用，例如：
 + 同步调用是三者当中最简单的，而回调又常常是异步调用的基础，
 + 对于不同类型的语言（如结构化语言和对象语言）、平台（Win32、JDK）或构架（CORBA、DCOM、WebService），客户和服务的交互除了同步方式以外，都需要具备一定的异步通知机制，让服务方（或接口提供方）在某些情况下能够主动通知客户，而回调是实现异步的一个最简捷的途径。
 + 对于一般的结构化语言，可以通过回调函数来实现回调。回调函数也是一个函数或过程，不过它是一个由调用方自己实现，供被调用方使用的特殊函数。
-+ 在面向对象的语言中，回调则是通过接口或抽象类来实现的，我们把实现这种接口的类成为回调类，回调类的对象成为回调对象。对于象C++或Object Pascal这些兼容了过程特性的对象语言，不仅提供了回调对象、回调方法等特性，也能兼容过程语言的回调函数机制。
++ 在面向对象的语言中，回调则是通过接口或抽象类来实现的，我们把实现这种接口的类成为回调类，回调类的对象称为回调对象。对于像C++或Object Pascal这些兼容了过程特性的对象语言，不仅提供了回调对象、回调方法等特性，也能兼容过程语言的回调函数机制。
 + Windows平台的消息机制也可以看作是回调的一种应用，我们通过系统提供的接口注册消息处理函数（即回调函数），从而实现接收、处理消息的目的。由于Windows平台的API是用C语言来构建的，我们可以认为它也是回调函数的一个特例。
 + 对于分布式组件代理体系CORBA，异步处理有多种方式，如回调、事件服务、通知服务等。事件服务和通知服务是CORBA用来处理异步消息的标准服务，他们主要负责消息的处理、派发、维护等工作。对一些简单的异步处理过程，我们可以通过回调机制来实现。
 
