--- a/CPP/C-C++06_编程技巧.md
+++ b/CPP/C-C++06_编程技巧.md
@@ -1,5 +1,74 @@
 ## C/C++ 常用编程技巧
 
+### C++ write 将整数写入文件
+
++ 可以使用`std::to_string()`函数将整数转换为字符串，然后依次获取字符串的每个字符，存入到`std::vector<char>`容器中
++ 使用`write()`函数，将容器中的数据写入即可
+
++ 示例
+```cpp
+#include <string>
+#include <unistd.h>
+
+int main()
+{
+    num = 4;
+    std::string num_string {};
+    std::vector<char> buf(20);
+    num_string = std::to_string(num);
+    for (auto &it : num_string)
+    {
+        buf.push_back(it);
+    }
+    ret = write(shm_fd, buf.data(), buf.size());
+    if (ret != -1)
+    {
+        std::cerr << "Success to write data to shared memory file" << std::endl;
+    }
+
+    return 0;
+}
+```
+
+### C write 将整数写入文件
+
+在 C 语言中，使用 `write()` 函数可以将整数写入到文件描述符中。`write()` 函数的原型如下：
+
+```c
+#include <unistd.h>
+
+ssize_t write(int fd, const void *buf, size_t count);
+```
+
+- `fd` 是文件描述符，表示要写入的文件或套接字的标识符。
+- `buf` 是指向要写入数据的缓冲区的指针。
+- `count` 是要写入的字节数。
+
+要将整数写入文件，需要将整数转换为字符串形式，然后将字符串写入文件。可以使用 `sprintf()` 函数将整数转换为字符串，然后将字符串传递给 `write()` 函数进行写入。下面是一个示例：
+
+```c
+#include <stdio.h>
+#include <unistd.h>
+
+int main() {
+    int number = 12345;
+    char buffer[20];
+    int bytes_written;
+
+    sprintf(buffer, "%d", number);
+    bytes_written = write(STDOUT_FILENO, buffer, strlen(buffer));
+
+    if (bytes_written == -1) {
+        perror("Error writing to file");
+        return 1;
+    }
+
+    return 0;
+}
+```
+
+上述示例中，将整数 `number` 转换为字符串形式，并将字符串写入标准输出。`STDOUT_FILENO` 表示标准输出的文件描述符。请注意，在实际使用中，你需要将文件描述符替换为要写入的文件或套接字的有效文件描述符。
+
 ### 文件读取到内存，写入到新文件
 
 在 C++11 中，可以使用 `std::ifstream` 类来读取文件内容，并使用 `std::ofstream` 类来写入文件内容。下面是一个示例代码，演示如何将文件读取到内存中，然后保存为新文件：
