update opencv module

--- a/CPP/C-C++03_常用函数.md
+++ b/CPP/C-C++03_常用函数.md
@@ -1,3 +1,109 @@
+## std::localtime
+
++ 简介：
+  + std::localtime() 是 C++ 标准库中的一个函数，用于将时间值（通常是由 std::time() 函数获得的时间戳）转换为本地时间的结构
+
++ 原型：
+```cpp
+#include <ctime>
+
+std::tm* std::localtime(const std::time_t* timePtr);
+```
+
++ 参数：
+  + timePtr：一个指向 std::time_t 类型变量的指针，表示要转换为本地时间的时间值
+
++ 返回值：
+  + 如果成功转换为本地时间，则返回一个指向 std::tm 结构的指针，其中包含了年、月、日、时、分、秒等时间信息
+  + 如果转换失败或 timePtr 为 nullptr，则返回 nullptr
+
++ 详解：
+  + std::tm 结构包含了以下成员：
+  ```cpp
+  struct tm {
+      int tm_sec;   // 秒 (0 ~ 59)
+      int tm_min;   // 分 (0 ~ 59)
+      int tm_hour;  // 小时 (0 ~ 23)
+      int tm_mday;  // 一个月的日期 (1 ~ 31)
+      int tm_mon;   // 月份 (0 ~ 11，0 表示 1 月)
+      int tm_year;  // 年份 (自 1900 年起)
+      int tm_wday;  // 一周的日期 (0 ~ 6，0 表示星期日)
+      int tm_yday;  // 一年的日期 (0 ~ 365，0 表示 1 月 1 日)
+      int tm_isdst; // 夏令时标识符 (-1 表示不确定，0 表示不使用夏令时，>0 表示使用夏令时)
+  };
+  ```
+
++ 示例：
+```cpp
+#include <iostream>
+#include <ctime>
+
+int main() {
+    std::time_t currentTime = std::time(nullptr);
+    std::tm* localTime = std::localtime(&currentTime);
+
+    if (localTime != nullptr) {
+        std::cout << "本地时间：" << localTime->tm_year + 1900 << "-"
+                  << localTime->tm_mon + 1 << "-" << localTime->tm_mday
+                  << " " << localTime->tm_hour << ":"
+                  << localTime->tm_min << ":" << localTime->tm_sec << std::endl;
+    } else {
+        std::cout << "转换为本地时间失败" << std::endl;
+    }
+
+    return 0;
+}
+```
+
++ 注：
+  + 在上述示例中，我们使用 std::time() 函数获取当前的系统时间，并将其存储在 currentTime 变量中。然后，我们使用 std::localtime() 函数将 currentTime 转换为本地时间的 std::tm 结构，并将其存储在 localTime 指针中
+  + 我们可以通过访问 std::tm 结构的成员，如 tm_year、tm_mon、tm_mday 等，获取转换后的本地时间的年、月、日、小时、分钟和秒等信息
+  + 需要注意的是，std::localtime() 函数返回的指针指向一个静态分配的 std::tm 结构，因此在下一次调用 std::localtime() 之前应尽快使用转换后的时间信息
+
+## std::time
+
++ 简介：
+  + std::time() 是 C++ 标准库中的一个函数，用于获取当前的系统时间
+
++ 原型：
+```cpp
+#include <ctime>
+
+std::time_t std::time(std::time_t* timePtr);
+```
+
++ 参数：
+  + timePtr：一个指向 std::time_t 类型的变量的指针，用于存储获取的系统时间。可以为 nullptr，表示不存储时间值。
+
++ 返回值：
+  + 如果成功获取系统时间，则返回一个 std::time_t 类型的值，表示自 1970 年 1 月 1 日以来的秒数（UTC 时间）
+  + 如果获取系统时间失败，则返回 -1
+
++ 示例：
+```cpp
+#include <iostream>
+#include <ctime>
+
+int main() {
+    std::time_t currentTime = std::time(nullptr);
+
+    if (currentTime != -1) {
+        std::cout << "当前时间：" << std::asctime(std::localtime(&currentTime));
+    } else {
+        std::cout << "获取系统时间失败" << std::endl;
+    }
+
+    return 0;
+}
+```
+
++ 注：
+  + 在上述示例中，我们使用 std::time() 函数获取当前的系统时间，并将其存储在 currentTime 变量中。然后，我们使用 std::localtime() 函数将 currentTime 转换为本地时间，并使用 std::asctime() 函数将本地时间转换为字符串格式进行输出
+  + 需要注意的是，std::time() 返回的时间是从 1970 年 1 月 1 日以来经过的秒数，也称为 UNIX 时间戳。为了方便使用和显示，可以使用其他时间处理函数将时间戳转换为可读的日期和时间格式
+  + 此外，std::time() 函数返回的时间精度可能取决于操作系统和实现。通常情况下，时间精度为秒级，但有些系统可能提供更高的精度
+
+---
+
 ## sched_yield
 
 + 简介：
