--- a/CPP/C-C++05_理论基础.md
+++ b/CPP/C-C++05_理论基础.md
@@ -1297,9 +1297,52 @@ C++ 插件在软件开发中具有许多应用，例如：
 
 + 为了减少程序的运行时错误，还是养成重写虚函数加上 override 的习惯
 
+---
+
 ## final
 
-+ 当不希望某个类被继承，或者不希望某个虚函数被重写，可以在类名和虚函数后添加`final`关键字。
++ 简介：
+  + final 是 C++11 引入的一个关键字，用于在类、成员函数或虚函数声明中指示其为最终版本，不可被派生类继承或覆盖
+  + 在类声明中，final 关键字用于阻止其他类继承该类。如果将 final 关键字应用于类声明，则该类将成为最终类，不能被其他类继承
+
++ 示例1：
+```cpp
+class Base final {
+    // 类定义
+};
+
+class Derived : public Base { // 错误，Derived 不能继承自 final 类 Base
+    // 类定义
+};
+```
+
++ 注1：
+  + 在上述示例中，Base 类被声明为 final 类，因此不能被其他类继承。当 Derived 类试图从 Base 类派生时，会导致编译错误。
+  + 在成员函数声明中，final 关键字用于阻止派生类重写该函数。如果将 final 关键字应用于虚函数或重载函数，它表示该函数在派生类中不能被覆盖
+
++ 示例2：
+```cpp
+class Base {
+public:
+    virtual void foo() final {
+        // 函数定义
+    }
+};
+
+class Derived : public Base {
+public:
+    void foo() override { // 错误，不能覆盖被声明为 final 的函数 foo
+        // 函数定义
+    }
+};
+```
+
++ 注2：
+  + 在上述示例中，Base 类中的 foo() 函数被声明为 final，表示它不能在派生类中被覆盖。当 Derived 类试图覆盖 foo() 函数时，会导致编译错误。
+  + 使用 final 关键字可以提供额外的语义信息，以确保类或函数的最终性。它可以用于设计层面的约束，防止意外的继承或覆盖，从而提高代码的安全性和可靠性
+  + 请注意，final 关键字仅在派生类和虚函数/重载函数中使用，不能用于其他上下文。此外，final 关键字是 C++11 引入的特性，因此需要使用支持 C++11 或更高版本的编译器
+
+<!-- + 当不希望某个类被继承，或者不希望某个虚函数被重写，可以在类名和虚函数后添加`final`关键字。
 + 添加`final`关键字后被继承或重写，编译器会报错
 + 示例
   ```c++
@@ -1322,7 +1365,7 @@ C++ 插件在软件开发中具有许多应用，例如：
     class C : B // Error: B is final
     {
     };
-  ``` 
+  ```  -->
 
 ## Linux C++与Windows C++
 
