--- a/Grandhonor/rk_工地盒子/1-4_图片流服务器.md
+++ b/Grandhonor/rk_工地盒子/1-4_图片流服务器.md
@@ -39,6 +39,13 @@ export LD_LIBRARY_PATH=/mnt/remote/190-mnt/zhangjunyi/workspace/demo/third_party
 ./vca.exe --service-mode 0 --id aaa --detector-conf-inline --detector-conf @--detector-models@/data/models/PERSON/DETECT.conf@xxxx@yyyy@ --input-video-name /home/user/Videos/zhuoer_face_new.mp4 --output-type 5
 
 ./vca.exe --service-mode 0 --id aaa --detector-conf-inline --detector-conf @--detector-models@/data/models/PERSON/DETECT.conf@xxxx@yyyy@ --input-video-name rtsp://admin:a1234567@192.169.7.123:554 --output-type 5
+
+# 区域入侵 - 人体
+./vca.exe --service-mode 0 --id aaa --detector-conf-inline --detector-conf @--detector-models@/data/models/PERSON/DETECT.conf@xxxx@yyyy@ --input-video-name rtsp://192.169.4.16/test_personcount.mp4 --output-type 5
+
+# 烟火
+./vca.exe --service-mode 0 --id fire --detector-conf-inline --detector-conf @--detector-models@/data/models/PERSON/DETECT.conf@xxxx@yyyy@ --input-video-name rtsp://192.169.4.16/test_fire_smoke.mp4 --output-type 5
+
 ```
 
 + 解析Mjpeg图片
