--- a/CPP/C-C++03_常用函数.md
+++ b/CPP/C-C++03_常用函数.md
@@ -1,3 +1,208 @@
+## 简介
+
++ 常用函数
+
+## std::uniform_int_distribution
+
+`std::uniform_int_distribution`是C++标准库中的一个分布类，用于生成指定范围内的均匀分布的整数随机数。
+
+以下是一些关键点来详细解释`std::uniform_int_distribution`的用法和特性：
+
+1. `std::uniform_int_distribution`的构造函数：
+   ```cpp
+   explicit uniform_int_distribution(IntType a = 0, IntType b = std::numeric_limits<IntType>::max());
+   ```
+   构造一个`std::uniform_int_distribution`对象。参数`a`和`b`用于指定生成随机数的范围，生成的随机数将包含`a`和`b`。
+
+2. `std::uniform_int_distribution`的成员函数`operator()()`：
+   ```cpp
+   result_type operator()(Engine& eng);
+   ```
+   通过调用`operator()`函数，可以生成一个随机数。需要提供一个随机数引擎对象`eng`作为参数，该引擎将用于生成随机数。
+
+3. `std::uniform_int_distribution`的成员函数`param()`和`param(const param_type& parm)`：
+   ```cpp
+   param_type param() const;
+   void param(const param_type& parm);
+   ```
+   `param()`函数用于获取当前分布对象的参数，即范围的上下界。`param(const param_type& parm)`函数用于设置分布对象的参数。
+
+4. `std::uniform_int_distribution`对象的用法示例：
+   ```cpp
+   #include <iostream>
+   #include <random>
+
+   int main() {
+       std::random_device rd;
+       std::mt19937 rng(rd());
+
+       std::uniform_int_distribution<int> dist(1, 10);
+
+       for (int i = 0; i < 5; ++i) {
+           int randomNumber = dist(rng);
+           std::cout << "Random number: " << randomNumber << std::endl;
+       }
+
+       return 0;
+   }
+   ```
+   在上述示例中，首先创建一个`std::random_device`对象`rd`用于获取随机种子。然后，创建一个`std::mt19937`对象`rng`作为随机数引擎。接下来，创建一个`std::uniform_int_distribution<int>`对象`dist`，表示生成1到10之间（包括1和10）的整数随机数。最后，通过在循环中调用`dist(rng)`生成随机数，并将其打印输出。
+
+`std::uniform_int_distribution`用于生成均匀分布的整数随机数，确保生成的随机数在指定范围内的分布是均匀的。它通常与随机数引擎（如`std::mt19937`）配合使用，可以满足许多随机数生成的需求。
+
+## std::mt19937
+
+`std::mt19937`是C++标准库中的一个随机数引擎类，用于生成高质量的伪随机数序列。它基于梅森旋转算法（Mersenne Twister）实现，并且具有良好的随机性和周期性。
+
+以下是一些关键点来详细解释`std::mt19937`的用法和特性：
+
+1. `std::mt19937`的构造函数：
+   ```cpp
+   explicit mt19937();
+   explicit mt19937(unsigned int seed);
+   template <class Sseq> explicit mt19937(Sseq& q);
+   ```
+   `std::mt19937`提供了几种不同的构造函数。默认构造函数会使用默认的种子值初始化随机数引擎。第二个构造函数接受一个无符号整数作为种子值。第三个构造函数接受一个序列生成器对象作为参数，并使用该序列生成器生成种子序列。
+
+2. `std::mt19937`的成员函数`operator()()`：
+   ```cpp
+   result_type operator()();
+   ```
+   通过调用`operator()`函数，可以生成一个随机数。返回的随机数的类型由`result_type`定义。
+
+3. `std::mt19937`的成员函数`seed()`：
+   ```cpp
+   void seed(unsigned int seed);
+   ```
+   通过调用`seed()`函数，可以重新设置随机数引擎的种子值。
+
+4. `std::mt19937`的成员函数`discard()`：
+   ```cpp
+   void discard(unsigned long long z);
+   ```
+   `discard()`函数用于丢弃指定数量的随机数。这在某些情况下可以用于跳过初始的随机数，以获得更随机的序列。
+
+5. `std::mt19937`对象的用法示例：
+   ```cpp
+   #include <iostream>
+   #include <random>
+
+   int main() {
+       std::mt19937 rng;
+
+       // 设置种子值
+       rng.seed(42);
+
+       // 生成随机数
+       int randomNumber = rng();
+
+       std::cout << "Random number: " << randomNumber << std::endl;
+
+       return 0;
+   }
+   ```
+   在上述示例中，首先创建一个`std::mt19937`对象`rng`。然后，通过调用`rng.seed()`来设置种子值，这里使用了常数值42作为种子。最后，通过调用`rng()`生成一个随机数，并将其打印输出。
+
+`std::mt19937`是一个高质量的随机数引擎，通常比`std::rand()`等传统的随机数生成函数产生更好的随机数。它在C++11标准中被引入，用于替代了旧的随机数引擎。
+
+## std::random_device
+
+`std::random_device`是C++标准库中的一个类，用于生成真正的随机数。它是一个非确定性随机数生成器，通常通过操作系统提供的熵源来获取随机数。
+
+`std::random_device`类定义在头文件 `<random>` 中，用于产生高质量的随机数，适用于密码学、模拟和其他需要真正随机性的应用场景。
+
+以下是一些关键点来详细解释`std::random_device`的用法和特性：
+
+1. `std::random_device`的构造函数：
+   ```cpp
+   explicit random_device(const string& token = implementation-defined);
+   ```
+   构造一个`std::random_device`对象。可选的`token`参数用于指定特定的随机数生成器实现。
+
+2. `std::random_device`的成员函数`operator()`：
+   ```cpp
+   result_type operator()();
+   ```
+   通过调用`operator()`函数，可以生成一个随机数。返回的随机数的类型由`result_type`定义。
+
+3. `std::random_device`的成员函数`entropy()`：
+   ```cpp
+   result_type entropy() const;
+   ```
+   返回随机数生成器的熵值，表示生成的随机数的质量。如果熵值为0，表示随机数生成器没有可用的熵源。
+
+4. `std::random_device`对象的用法示例：
+   ```cpp
+   #include <iostream>
+   #include <random>
+
+   int main() {
+       std::random_device rd;
+
+       // 生成一个随机数
+       int randomNumber = rd();
+
+       std::cout << "Random number: " << randomNumber << std::endl;
+       std::cout << "Entropy: " << rd.entropy() << std::endl;
+
+       return 0;
+   }
+   ```
+   在上述示例中，首先创建一个`std::random_device`对象`rd`。然后，通过调用`rd()`来生成一个随机数，并将其打印输出。最后，使用`rd.entropy()`获取熵值，并将其打印输出。
+
+需要注意的是，由于`std::random_device`是非确定性的，它可能会依赖于操作系统的随机数生成器实现。因此，不同的操作系统和编译器可能会有不同的行为。在某些情况下，`std::random_device`可能返回伪随机数，而不是真正的随机数。如果您需要高质量的随机数，请考虑使用其他的随机数生成器，如`std::mt19937`。
+
+## std::move
+
+在C++中，`std::move()`是一个函数模板，位于`<utility>`头文件中。它用于将对象的状态从一个对象转移到另一个对象，通常用于实现高效的移动语义。
+
+`std::move()`函数将给定的对象转换为右值引用，使得可以使用移动语义来操作该对象。移动语义是C++11引入的一个重要特性，允许在对象转移所有权时避免不必要的复制操作，提高性能。
+
+以下是`std::move()`函数的一般语法：
+
+```cpp
+std::move(argument);
+```
+
+其中，`argument`是要移动的对象。
+
+使用`std::move()`函数的主要目的是将对象的状态从一个对象转移到另一个对象，而不进行深拷贝操作。这对于移动构造函数和移动赋值运算符非常有用，可以显著提高对象的性能。
+
+以下是`std::move()`函数的一些常见用法：
+
+1. 移动语义的实现：
+   ```cpp
+   // 移动构造函数
+   MyClass(MyClass&& other) : data(std::move(other.data)) {
+       // ...
+   }
+   
+   // 移动赋值运算符
+   MyClass& operator=(MyClass&& other) {
+       data = std::move(other.data);
+       // ...
+       return *this;
+   }
+   ```
+
+   在移动构造函数和移动赋值运算符中，通过使用`std::move()`函数，将数据从一个对象移动到另一个对象，避免了不必要的复制。
+
+2. 传递参数的移动语义：
+   ```cpp
+   void processData(std::vector<int>&& data) {
+       // 对移动后的data进行操作
+   }
+   
+   std::vector<int> vec = {1, 2, 3};
+   processData(std::move(vec));
+   ```
+
+   在此示例中，通过使用`std::move()`函数，将`vec`对象转换为右值引用，并将其作为参数传递给`processData()`函数。这样可以避免不必要的拷贝操作。
+
+需要注意的是，`std::move()`函数只是将对象转换为右值引用，本身并不进行实际的数据移动。实际的移动操作需要由移动构造函数或移动赋值运算符来实现。
+
+使用`std::move()`函数需要谨慎操作，确保正确处理移动后的对象状态，避免悬空引用和使用已经移动的对象。
+
 ## std::localtime
 
 + 简介：
