--- a/CPP/C-C++05_理论基础.md
+++ b/CPP/C-C++05_理论基础.md
@@ -1,5 +1,29 @@
 # 概述 -- 理论基础知识
 
+## 线程 分类
+
+在C++中，线程可以根据不同的特性和使用方式进行分类。以下是几种常见的线程分类：
+
+1. 操作系统线程：
+   操作系统线程是由操作系统内核创建和管理的线程，也称为内核线程。它们是操作系统的一部分，提供了底层的线程调度和管理。在C++中，使用诸如`std::thread`等标准库提供的线程类，可以创建和操作操作系统线程。
+
+2. 用户线程：
+   用户线程是在用户空间中创建和管理的线程，不依赖于操作系统内核的线程管理机制。在C++中，可以使用第三方库（如Boost.Thread）或操作系统提供的用户线程接口（如pthread）来创建和操作用户线程。用户线程的调度和管理由用户程序自己负责。
+
+3. 主线程：
+   主线程是程序启动时由操作系统创建的第一个线程。它是程序的入口点，用于执行程序的主要逻辑。在C++中，主线程通常是`main()`函数所在的线程。主线程可以创建其他线程，并负责协调它们的执行。
+
+4. 子线程：
+   子线程是由主线程或其他线程创建的额外线程。它们通常用于执行一些耗时的任务或并发处理。在C++中，可以使用线程类（如`std::thread`）来创建子线程。子线程可以并行执行，独立于主线程或其他子线程。
+
+5. 后台线程：
+   后台线程是在程序中运行的线程，其执行不会阻止程序的退出。当所有的前台线程（如主线程）退出时，后台线程会自动终止。在C++中，可以使用线程类的成员函数`std::thread::detach()`将线程设置为后台线程。
+
+6. 前台线程：
+   前台线程是程序中运行的线程，它们的执行会阻止程序的退出。当所有的前台线程结束执行时，程序才会退出。在C++中，主线程通常是前台线程。其他前台线程可以通过调用线程类的成员函数`std::thread::join()`等待其它线程的完成。
+
+这些是一些常见的C++线程分类。根据应用程序的需求，您可以选择适当的线程类型和管理机制来实现并发和多线程编程。
+
 ## 回调函数 存在的意义
 
 回调函数在 C++ 中具有重要的意义，它为编程提供了灵活性和可扩展性。以下是一些回调函数存在的意义：
@@ -1767,4 +1791,40 @@ public:
 + 关于函数的返回值，最好还是返回“值”吧，最好不要返回地址啊引用啊什么的，因为你不清楚使用者会不会改变这些值，如果返回的是引用，内存中只有一份，如果用户修改了值，势必会影响到其他的。
 + 所以这个函数的原型最好是 `string test(const string& A, const string& B)`
 
-## `std::vector`的用法
+## std::vector 技巧
+
+使用`std::vector`时，有几个技巧可以帮助您更有效地使用和操作向量。以下是一些常用的`std::vector`技巧：
+
+1. 初始化和赋值：
+   - 使用初始化列表初始化向量：`std::vector<int> vec = {1, 2, 3, 4, 5};`
+   - 使用范围构造函数从另一个容器初始化向量：`std::vector<int> vec(otherVec.begin(), otherVec.end());`
+   - 使用`assign()`函数从另一个容器或范围进行赋值：`vec.assign(otherVec.begin(), otherVec.end());`
+
+2. 动态调整大小：
+   - 使用`resize()`函数调整向量大小，并在需要时插入或删除元素：`vec.resize(newSize);`
+   - 使用`push_back()`函数在向量末尾插入元素：`vec.push_back(value);`
+   - 使用`pop_back()`函数删除向量末尾的元素：`vec.pop_back();`
+
+3. 访问和修改元素：
+   - 使用下标操作符`[]`访问元素：`int value = vec[index];`
+   - 使用`at()`函数进行安全的边界检查访问：`int value = vec.at(index);`
+   - 使用迭代器遍历和修改元素：`for (auto it = vec.begin(); it != vec.end(); ++it) { *it = newValue; }`
+
+4. 获取向量信息：
+   - 使用`size()`函数获取向量的大小（元素个数）：`int size = vec.size();`
+   - 使用`empty()`函数检查向量是否为空：`if (vec.empty()) { /* 向量为空 */ }`
+   - 使用`capacity()`函数获取向量的容量（内部存储空间大小）：`int capacity = vec.capacity();`
+
+5. 清空和重置向量：
+   - 使用`clear()`函数清空向量中的所有元素：`vec.clear();`
+   - 使用`erase()`函数擦除指定位置的元素或指定范围的元素：`vec.erase(vec.begin() + index);` 或 `vec.erase(vec.begin(), vec.begin() + count);`
+
+6. 内存优化：
+   - 使用`reserve()`函数预分配足够的内存以避免频繁的重新分配：`vec.reserve(newCapacity);`
+   - 使用`shrink_to_fit()`函数减小向量的容量以匹配其大小：`vec.shrink_to_fit();`
+
+7. 使用算法和迭代器：
+   - 使用`std::algorithm`库中的算法和`std::vector`的迭代器结合进行元素查找、排序等操作。
+   - 注意在修改向量时，可能需要使用迭代器的`erase()`和`insert()`函数。
+
+这些技巧可以帮助您更好地使用和操作`std::vector`，使您的代码更高效、可读性更好。请根据具体的需求和场景选择适当的技巧。
