--- a/CPP/C-C++08_常用类.md
+++ b/CPP/C-C++08_常用类.md
@@ -1,4 +1,69 @@
-## `std::ifstream`
+## std::thread
+
+`std::thread`是C++标准库提供的用于创建和管理线程的类。它位于`<thread>`头文件中，并定义在`std`命名空间中。
+
+`std::thread`类提供了以下主要功能和成员函数：
+
+1. 构造函数：
+   - `explicit thread() noexcept;`
+   - `template <class Function, class... Args> explicit thread(Function&& f, Args&&... args);`
+   - `thread(const thread&) = delete;`（复制构造函数被禁用）
+   - `thread(thread&& other) noexcept;`（移动构造函数）
+
+2. 成员函数：
+   - `operator=`: 赋值运算符，用于将一个线程对象赋值给另一个线程对象。
+   - `join()`: 阻塞调用线程，直到该线程执行完成。
+   - `detach()`: 将线程分离，使其在后台运行，不再与调用线程同步。
+   - `swap()`: 交换两个线程对象的内容。
+   - `get_id()`: 返回线程的唯一标识符。
+   - `joinable()`: 检查线程是否可加入或分离。
+   - `native_handle()`: 返回底层操作系统的线程句柄。
+   - `hardware_concurrency()`: 返回支持并发执行的线程数量。
+
+3. 静态成员函数：
+   - `std::thread::id`: 表示线程的唯一标识符的类型。
+   - `std::thread::native_handle_type`: 表示底层操作系统线程句柄的类型。
+   - `std::thread::hardware_concurrency()`: 返回支持并发执行的线程数量。
+
+使用`std::thread`类创建线程的一般步骤如下：
+
+1. 定义一个可调用的函数或函数对象，作为线程的执行逻辑。
+2. 创建`std::thread`对象，并将可调用的函数或函数对象作为参数传递给构造函数。
+3. 通过调用`join()`等待线程执行完成，或使用`detach()`分离线程并允许其在后台运行。
+
+以下是一个简单的示例，演示如何使用`std::thread`类创建和管理线程：
+
+```cpp
+#include <iostream>
+#include <thread>
+
+// 可调用的函数作为线程执行逻辑
+void threadFunction(int id) {
+    std::cout << "Thread " << id << " started." << std::endl;
+    // 执行一些任务
+    std::cout << "Thread " << id << " finished." << std::endl;
+}
+
+int main() {
+    // 创建线程对象，并指定可调用的函数及其参数
+    std::thread t1(threadFunction, 1);
+    std::thread t2(threadFunction, 2);
+
+    // 等待线程执行完成
+    t1.join();
+    t2.join();
+
+    return 0;
+}
+```
+
+注意，使用`std::thread`类创建线程时，需要确保线程的执行完成或分离，否则会导致程序异常退出或资源泄漏。
+
+这是对`std::thread`类的简要解释，您可以查阅C++标准库的文档以获取更详细的信息和用法示例。
+
+---
+
+## std::ifstream
 
 `std::ifstream` 是 C++ 标准库中用于文件输入的类，用于从文件中读取数据。它是基于流的输入操作符 `>>` 实现的，可以通过打开文件并使用 `>>` 运算符将文件中的数据读取到不同类型的变量中。
 
@@ -22,7 +87,9 @@
 
 使用 `std::ifstream` 类可以方便地打开、读取和处理文件内容。在使用完毕后，应该关闭文件以释放资源。
 
-## `std::ofstream`
+---
+
+## std::ofstream
 
 `std::ofstream` 是 C++ 标准库中用于文件输出的类，用于将数据写入文件中。它是基于流的输出操作符 `<<` 实现的，可以通过打开文件并使用 `<<` 运算符将数据写入文件。
 
