--- a/CPP/C-C++06_编程技巧.md
+++ b/CPP/C-C++06_编程技巧.md
@@ -1,5 +1,209 @@
 ## C/C++ 常用编程技巧
 
+## 生成随机序列 字母 数字 混合
+
+要生成指定大小的随机数字和字符混合序列，可以结合随机数生成器、字符操作和条件判断来实现。
+
+以下是一个生成指定大小的随机数字和字符混合序列的示例代码：
+
+```cpp
+#include <iostream>
+#include <vector>
+#include <random>
+
+std::string generateRandomMixedString(int size) {
+    std::random_device rd;
+    std::mt19937 gen(rd());
+    std::uniform_int_distribution<int> dist(0, 2);
+
+    std::string randomString;
+    randomString.reserve(size);
+
+    for (int i = 0; i < size; ++i) {
+        int choice = dist(gen);
+        if (choice == 0) {
+            // 生成数字字符
+            std::uniform_int_distribution<int> numDist('0', '9');
+            randomString.push_back(static_cast<char>(numDist(gen)));
+        } else if (choice == 1) {
+            // 生成大写字母字符
+            std::uniform_int_distribution<int> upperDist('A', 'Z');
+            randomString.push_back(static_cast<char>(upperDist(gen)));
+        } else {
+            // 生成小写字母字符
+            std::uniform_int_distribution<int> lowerDist('a', 'z');
+            randomString.push_back(static_cast<char>(lowerDist(gen)));
+        }
+    }
+
+    return randomString;
+}
+
+int main() {
+    int size = 10;
+
+    std::string randomString = generateRandomMixedString(size);
+
+    // 打印生成的随机数字和字符混合序列
+    std::cout << randomString << std::endl;
+
+    return 0;
+}
+```
+
+在上述代码中，`generateRandomMixedString()`函数使用`std::random_device`来获取真正的随机数种子，然后使用`std::mt19937`作为随机数引擎，并使用`std::uniform_int_distribution`定义一个均匀分布的整数分布，范围为0到2。通过这个分布生成一个随机数，根据不同的随机数选择生成数字字符、大写字母字符或小写字母字符，并将其追加到`std::string`中。最后，返回生成的随机数字和字符混合序列。
+
+在`main()`函数中，指定了字符序列的大小，并调用`generateRandomMixedString()`函数来生成随机数字和字符混合序列。然后，通过打印输出生成的随机数字和字符混合序列。
+
+## std::queue 清空队列
+
+要清空C++中的`std::queue`队列，可以使用以下方法：
+
+1. 使用`std::queue`的`swap()`函数：
+   ```cpp
+   std::queue<T> emptyQueue;
+   std::swap(queue, emptyQueue);
+   ```
+
+   这种方法创建一个空的临时队列`emptyQueue`，然后通过调用`std::swap()`函数将原始队列`queue`与空队列交换。由于交换后，临时队列会被销毁，因此原始队列也会变为空。
+
+2. 循环弹出元素直到队列为空：
+   ```cpp
+   while (!queue.empty()) {
+       queue.pop();
+   }
+   ```
+
+   这种方法使用一个循环来连续地从队列中弹出元素，直到队列为空为止。通过循环弹出操作，可以逐个清空队列中的元素。
+
+这两种方法都可以有效地清空`std::queue`队列中的所有元素。根据具体情况选择合适的方法来清空队列。
+
+需要注意的是，无论使用哪种方法，清空队列后，队列的大小将变为0，但是队列的容量（底层数据结构的大小）可能不会改变。如果需要释放底层数据结构所占用的内存，可以考虑重新创建一个新的队列对象。
+
+## 回调函数 编程技巧 示例
+
+以下是使用C++回调函数的一些示例：
+
+示例 1: 使用函数指针作为回调函数
+
+```cpp
+#include <iostream>
+
+// 定义回调函数类型
+typedef void (*CallbackFunc)(int);
+
+// 接受回调函数作为参数的函数
+void performOperation(int data, CallbackFunc callback) {
+    // 执行某些操作
+    // ...
+    
+    // 调用回调函数
+    callback(data);
+}
+
+// 回调函数
+void callbackFunction(int data) {
+    std::cout << "Callback executed with data: " << data << std::endl;
+}
+
+int main() {
+    int data = 42;
+    
+    // 调用函数并传递回调函数
+    performOperation(data, callbackFunction);
+    
+    return 0;
+}
+```
+
+示例 2: 使用Lambda表达式作为回调函数
+
+```cpp
+#include <iostream>
+
+// 接受回调函数作为参数的函数
+void performOperation(int data, const std::function<void(int)>& callback) {
+    // 执行某些操作
+    // ...
+    
+    // 调用回调函数
+    callback(data);
+}
+
+int main() {
+    int data = 42;
+    
+    // 使用Lambda表达式定义回调函数
+    auto callback = [](int data) {
+        std::cout << "Callback executed with data: " << data << std::endl;
+    };
+    
+    // 调用函数并传递Lambda表达式作为回调函数
+    performOperation(data, callback);
+    
+    return 0;
+}
+```
+
+示例 3: 使用函数对象作为回调函数
+
+```cpp
+#include <iostream>
+
+// 定义回调函数的函数对象
+class CallbackFunctor {
+public:
+    void operator()(int data) {
+        std::cout << "Callback executed with data: " << data << std::endl;
+    }
+};
+
+// 接受回调函数作为参数的函数
+void performOperation(int data, const CallbackFunctor& callback) {
+    // 执行某些操作
+    // ...
+    
+    // 调用回调函数
+    callback(data);
+}
+
+int main() {
+    int data = 42;
+    
+    // 创建回调函数对象
+    CallbackFunctor callback;
+    
+    // 调用函数并传递回调函数对象
+    performOperation(data, callback);
+    
+    return 0;
+}
+```
+
+这些示例展示了不同的回调函数用法，包括使用函数指针、Lambda表达式和函数对象作为回调函数。根据您的需求和编程风格，选择适当的方法来实现回调函数，并根据具体的应用场景来定义和使用回调函数。
+
+## 回调函数 编程技巧 建议
+
+当涉及到使用回调函数的编程技巧时，以下是一些实用的建议和技巧：
+
+1. 使用函数指针或函数对象：C++中回调函数可以通过函数指针或函数对象进行实现。函数指针是一种直接的方法，它允许您将函数的地址传递给其他函数作为回调。而函数对象（可调用对象）是一个类对象，它可以像函数一样被调用，并作为回调函数传递。选择函数指针或函数对象取决于您的需求和编程风格。
+
+2. 使用函数模板：使用函数模板可以使回调函数更加通用和灵活。通过模板参数，可以将不同类型的回调函数传递给函数模板，从而实现更广泛的适用性。这样可以减少代码的重复性，提高代码的可复用性。
+
+3. 使用Lambda表达式：Lambda表达式是C++11引入的一种匿名函数形式，它可以用作回调函数。Lambda表达式允许您在需要时定义并传递函数逻辑，而不需要单独定义函数或函数对象。它提供了一种更紧凑和方便的方式来编写回调函数，尤其是对于简单的逻辑或临时需求。
+
+4. 传递上下文信息：在回调函数中，有时候可能需要访问一些外部的上下文信息或数据。为了确保回调函数能够访问这些信息，可以通过函数参数或捕获列表将其传递给回调函数。这样，回调函数就可以访问和操作相关的上下文数据。
+
+5. 使用函数对象状态：函数对象作为回调函数时，可以存储状态信息，并在多次调用之间保留状态。这种状态可以在回调函数的不同调用之间共享，并且可以用于跟踪和处理状态相关的信息。
+
+6. 错误处理和异常安全性：在使用回调函数时，要注意错误处理和异常安全性。确保在回调函数中适当处理错误和异常，以避免潜在的问题。这可能包括对异常的捕获和处理，以及在出现错误时返回适当的错误码或执行相应的错误处理逻辑。
+
+7. 文档和清晰的接口设计：在使用回调函数的代码中，提供清晰的文档和接口设计是非常重要的。确保文档中清楚地描述回调函数的目的、参数和预期行为。同时，定义清晰的接口和回调函数签名，使得使用回调函数的代码更加易于理解和使用。
+
+这些技巧可以帮助您更好地使用回调函数，在C++中实现灵活和可扩展的编程。根据您的具体需求和编程场景，选择适
+
+当的技巧和方法来使用回调函数，并确保代码的可读性、可维护性和稳定性。
+
 ### C++ write 将整数写入文件
 
 + 可以使用`std::to_string()`函数将整数转换为字符串，然后依次获取字符串的每个字符，存入到`std::vector<char>`容器中
