--- a/Grandhonor/rk_工地盒子/1-4_图片流服务器.md
+++ b/Grandhonor/rk_工地盒子/1-4_图片流服务器.md
@@ -38,6 +38,7 @@ export LD_LIBRARY_PATH=/mnt/remote/190-mnt/zhangjunyi/workspace/demo/third_party
 ```bash
 ./vca.exe --service-mode 0 --id aaa --detector-conf-inline --detector-conf @--detector-models@/data/models/PERSON/DETECT.conf@xxxx@yyyy@ --input-video-name /home/user/Videos/zhuoer_face_new.mp4 --output-type 5
 
+# 财务室门口 摄像头
 ./vca.exe --service-mode 0 --id aaa --detector-conf-inline --detector-conf @--detector-models@/data/models/PERSON/DETECT.conf@xxxx@yyyy@ --input-video-name rtsp://admin:a1234567@192.169.7.123:554 --output-type 5
 
 # 区域入侵 - 人体
@@ -71,4 +72,23 @@ export LD_LIBRARY_PATH=/mnt/remote/190-mnt/zhangjunyi/workspace/demo/third_party
     + 删除结构化信息队列的头部数据
 
 + 加入mongoose，实现图片推流服务
+
+## 结构
+
++ 索引
+  + BaseIndex.hpp
+    + ProducerIndex.hpp
+    + ConsumerIndex.hpp
+
++ Mjpeg图片
+  + ParseMjpeg.hpp
+
++ 检测业务
+  + BaseServiceLogic.hpp
+    + ServiceLogic.hpp
+
++ 视频结构化引擎工具
+  + VcaTool.hpp
+  <!-- + ParseFrame.hpp
+  + ParseFrame.cpp -->
   
